Fix bug that caused scrollbars to disappear after a certain height

--- a/Web/Assets/css/compilify.css
+++ b/Web/Assets/css/compilify.css
@@ -118,9 +118,10 @@ strong {
     right: 0;
     top: 0;
 }
-#editors .CodeMirror {
+
+#editors .CodeMirror, 
+#editors .CodeMirror-scroll {
     height: 100%;
-    overflow-y: hidden;
     overflow-x: auto;
     width: 100%;
 }
